Update package names